--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 	</head>
 	<body>
 		<div class="calculator-body">
-			<div class="display"></div>
+			<div class="display">
+				<div class="top-display">35×26=</div>
+				<div class="bottom-display">746</div>
+			</div>
 			<div class="buttons">
 				<button class="span-2 extra">AC</button>
-				<button class="extra">+/-</button>
+				<button class="extra">DEL</button>
 				<button class="operator">/</button>
 				<button class="number">7</button>
 				<button class="number">8</button>
@@ -26,7 +29,7 @@
 				<button class="number">2</button>
 				<button class="number">3</button>
 				<button class="operator">+</button>
-				<button class="span-2">0</button>
+				<button class="number span-2">0</button>
 				<button class="number">.</button>
 				<button class="operator">=</button>
 			</div>
