Made the calculator work

--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
 	<body>
 		<div class="calculator-body">
 			<div class="display">
-				<div class="top-display">35×26=</div>
-				<div class="bottom-display">746</div>
+				<div class="top-display"></div>
+				<div class="bottom-display"></div>
 			</div>
 			<div class="buttons">
-				<button class="span-2 extra">AC</button>
-				<button class="extra">DEL</button>
-				<button class="operator">/</button>
-				<button class="number">7</button>
-				<button class="number">8</button>
-				<button class="number">9</button>
-				<button class="operator">×</button>
-				<button class="number">4</button>
-				<button class="number">5</button>
-				<button class="number">6</button>
-				<button class="operator">-</button>
-				<button class="number">1</button>
-				<button class="number">2</button>
-				<button class="number">3</button>
-				<button class="operator">+</button>
-				<button class="number span-2">0</button>
-				<button class="number">.</button>
-				<button class="operator">=</button>
+				<button class="span-2 extra ac btn" value="AC">AC</button>
+				<button class="extra del btn" value="DEL">DEL</button>
+				<button class="operator btn" value="÷">÷</button>
+				<button class="number btn" value="7">7</button>
+				<button class="number btn" value="8">8</button>
+				<button class="number btn" value="9">9</button>
+				<button class="operator btn" value="×">×</button>
+				<button class="number btn" value="4">4</button>
+				<button class="number btn" value="5">5</button>
+				<button class="number btn" value="6">6</button>
+				<button class="operator btn" value="-">-</button>
+				<button class="number btn" value="1">1</button>
+				<button class="number btn" value="2">2</button>
+				<button class="number btn" value="3">3</button>
+				<button class="operator btn" value="+">+</button>
+				<button class="number span-2 btn" value="0">0</button>
+				<button class="number btn" value=".">.</button>
+				<button class="equals btn" value="=">=</button>
 			</div>
 		</div>
 		<script src="script.js"></script>
