--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 				<div class="bottom-display"></div>
 			</div>
 			<div class="buttons">
-				<button class="span-2 extra ac btn" value="AC">AC</button>
-				<button class="extra del btn" value="DEL">DEL</button>
+				<button class="extra ac btn" value="AC">AC</button>
+				<button class="extra del btn" value="DEL"><=</button>
+				<button class="extra negative btn">+/-</button>
 				<button class="operator btn" value="÷">÷</button>
 				<button class="number btn" value="7">7</button>
 				<button class="number btn" value="8">8</button>
