Added round function to round result and added possible new keys as comments

--- a/index.html
+++ b/index.html
@@ -14,22 +14,31 @@
 				<div class="bottom-display"></div>
 			</div>
 			<div class="buttons">
+				<!-- <button class="operator sin btn" value="sin">sin</button> -->
 				<button class="extra ac btn" value="AC">AC</button>
 				<button class="extra del btn" value="DEL"><=</button>
-				<button class="extra negative btn">+/-</button>
+				<button class="extra negative btn" value="+/-">+/-</button>
 				<button class="operator btn" value="÷">÷</button>
+				<!-- Next line -->
+				<!-- <button class="operator cos btn" value="cos">cos</button> -->
 				<button class="number btn" value="7">7</button>
 				<button class="number btn" value="8">8</button>
 				<button class="number btn" value="9">9</button>
 				<button class="operator btn" value="×">×</button>
+				<!-- Next line -->
+				<!-- <button class="operator tan btn" value="tan">tan</button> -->
 				<button class="number btn" value="4">4</button>
 				<button class="number btn" value="5">5</button>
 				<button class="number btn" value="6">6</button>
 				<button class="operator btn" value="-">-</button>
+				<!-- Next line -->
+				<!-- <button class="operator sqrt btn" value="sqrt">√</button> -->
 				<button class="number btn" value="1">1</button>
 				<button class="number btn" value="2">2</button>
 				<button class="number btn" value="3">3</button>
 				<button class="operator btn" value="+">+</button>
+				<!-- Next line -->
+				<!-- <button class="number pi btn" value="π">π</button> -->
 				<button class="number span-2 btn" value="0">0</button>
 				<button class="number btn" value=".">.</button>
 				<button class="equals btn" value="=">=</button>
